# synapse-sensors

./: .gitignore  CMakeLists.txt  README.md
event/: event.c
network/: Makefile  configurations.c  connections.c  network.c  network.h
stream/: stream  stream.c
